--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="main.jpg" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Billy</span></h1>
+            <h1>Hi! <span></span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Hai kenalin aku billy. Aku kelas 10 SMK dan aku tinggal di Purwokerto. Bahasa favorit aku PHP dan HTML, aku baru belajar dari 3 tahun lalu. Hobi aku suka dengerin musik dan membuat sesuatu tentang teknologi digital. Makanan favorit aku nasi goreng dan steak 😋😋</p>
             <div class="social-icons">
