--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="main.jpg" alt="">
+            <img src="main.jpg" alt="profil">
         </div>
         <div class="home-content">
             <h1>Hi! <span></span></h1>
